# Xe

./: .gitignore  README.md
3rd/: install_third_lib.py  sdl.txt
Assets/inc/: XeBasicAsset.h  xeAssetCsharpAPI.h  xeAssetCsharpAPI.hpp  xeAssets.h  xeAssets.hpp  xeAssetsConfig.h  xeAssetsConfig.hpp  xeBasicAsset.hpp  xeBasicData.hpp  xeCompressFileStruct.h  xeCompressFileStruct.hpp
Assets/src/: XeBasicAsset.cpp
Audio/inc/: SoundCue.h  SoundNode.h  SoundNodePool.h  SoundWave.h  xeAudio.hpp  xeAudioConfig.hpp  xeAudioInstance.h
Audio/src/: SoundWave.cpp  xeAudioInstance.cpp
DataManage/inc/: xeBasicData.hpp  xeCompressFileStruct.h  xeDataManage.h  xeDataManageConfig.h  xeDataMangeCsharpAPI.h
Examples/: main.cpp
Graphical/csharp/: Graphical.csproj
Graphical/inc/: xeGraphicalConfig.h  xeVulkanInstance.h  xeWindow.h
Graphical/src/: xeVulkanInstance.cpp  xeWindow.cpp
IO/csharp/: IO_csharp.csproj
IO/inc/: XeIO.h  (+6 more)
MainLoop/: 3rd_lib.list.json
XeCsharpAPI/: Main.cs  XeCsharpAPI.csproj  XeIO.cs
csrc/Engine/xeCore/: CMakeLists.txt  XeCoreCsharp.cppm  xeAlloc.cppm  xeApplication.cpp  xeApplication.cppm  xeBaseDataType.cppm  xeClock.cpp  xeClock.cppm  xeCompiler.hpp  xeConfig.hpp  xeCoreClrOutput.cpp  xeCoreClrOutput.cppm  xeMemCmp.cppm  xeObject.cppm  xeOrdinals.cppm  xeString.cpp  xeString.cppm  xeUnit.cppm
rust/: Cargo.toml  build.py
rust/inc/: Rfd.hpp  xeRfd.hpp
rust/src/: lib.rs  xe_rfd.rs  xe_string_2_rust_string.rs
shader/: test.frag  test.frag.spv  test.vert  test.vert.spv
temp/: temp.vcxproj
test/: game_main.cpp
tset/: game_main.cpp
(+315 files in other folders)
